--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,3 +37,10 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+
+.centered{
+  margin-left: 40%;
+  text-align: center;
+}
+
